target/classes/META-INF/fabric8/openshift/prueba-camel-deploymentconfig.yml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: prueba-camel
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: pruebaCamel
  name: prueba-camel
spec:
  replicas: 1
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      labels:
        app: prueba-camel
        provider: fabric8
        version: 1.0-SNAPSHOT
        group: pruebaCamel
    spec:
      containers:
      - env:
        - name: jortiz-dev
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: prueba-camel:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: 1000m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 256Mi
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
